<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saisantosh.project0.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/movies"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/popular_movies"
        />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/stock_hawk"
        android:layout_below="@+id/movies"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:text="@string/stock_hawk"
/>
    <Button
        style="@style/ButtonStyle"
        android:id="@+id/build_it_bigger"
        android:layout_alignStart="@+id/stock_hawk"
        android:layout_below="@+id/stock_hawk"
        android:layout_marginTop="10dp"
        android:text="@string/build_it_bigger" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/app_material"
        android:layout_below="@+id/build_it_bigger"
        android:layout_marginTop="10dp"
        android:text="@string/make_your_app_material" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/ubiquitous"
        android:layout_alignStart="@+id/app_material"
        android:layout_below="@+id/app_material"
        android:layout_marginTop="10dp"
        android:text="@string/go_ubiquitous" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/capstone"
        android:layout_alignStart="@+id/ubiquitous"
        android:layout_below="@+id/ubiquitous"
        android:layout_marginTop="10dp"
        android:text="@string/capstone" />
</RelativeLayout>
